# netAIOps-multiagent-system

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: plan.md  review.md
.github/: copilot-instructions.md
noa-workshop/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.manifest.yaml  pyproject.toml  requirements.txt
noa-workshop/src/noa_workshop/: __init__.py  smoke_test.py
noa-workshop/src/noa_workshop/n1_agents/: __init__.py  agent_factory.py  orchestration_handoff.py  orchestration_magentic.py  orchestration_sequential.py  single_agents.py
noa-workshop/src/noa_workshop/n1_agents/instructions/: field_ops.md  noc_manager.md  security_compliance.md  telemetry_analyzer.md
noa-workshop/src/noa_workshop/n2_tools/: __init__.py  data_loader.py  field_ops_tools.py  security_tools.py  telemetry_tools.py
noa-workshop/src/noa_workshop/n3_data/field_ops/: inventory.json  technicians.json
noa-workshop/src/noa_workshop/n3_data/knowledge/: policies.json  sop_fiber_cut.md  sop_security_incident.md
noa-workshop/src/noa_workshop/n3_data/telemetry/: alarms.json  kpi_metrics.json  topology.json
noa-workshop/src/noa_workshop/n3_data/threat_intel/: ioc_feed.json
noa-workshop/src/noa_workshop/n3_data/tickets/: historical_tickets.json
noa-workshop/src/noa_workshop/n4_workflows/: __init__.py  workflow_handoff.py  workflow_sequential.py
noa-workshop/src/noa_workshop/n5_devui/: devui_server.py
noa-workshop/src/noa_workshop/n6_deployment/: __init__.py  hosted_agent.py  hosted_agent_deployer.py
(+4 files in other folders)
